@@ -3,6 +3,9 @@
 
 @section v2_17 Changes with libapreq2-2.17 (in development)
 
+- Multipart header parser [Yann Ylavic]
+  Rework apreq_parse_headers() to discard CRLF of folded values.
+
 @section v2_16 Changes with libapreq2-2.16 (released 17 March, 2021)
 
 - Build [Steve Hay]
